creusot/tests/should_fail/bad_law.stderr
error[creusot]: Laws cannot have additional generic parameters
 --> bad_law.rs:6:5
  |
6 |     fn my_law<T>(x: T);
  |     ^^^^^^^^^^^^^^^^^^^

error[creusot]: Expected `my_law` to be a logic function as specified by the trait declaration
  --> bad_law.rs:10:5
   |
10 |     fn my_law<T>(_: T) {}
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

